[package]
name = "sea-git-publish"
version = "0.1.0"
edition = "2021"
description = "A CLI tool to sync subdirectories from monorepos to external Git repositories"
license = "MIT"
repository = "https://github.com/raiment-studios/sea-git-publish"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.11.1"
