[package]
name = "sea-git-sync"
version = "0.1.2"
edition = "2024"
description = "A CLI tool to sync subdirectories from monorepos to external Git repositories"
license = "MIT"
repository = "https://github.com/raiment-studios/sea-git-sync"

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
regex = "1.11.1"
